--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <main>
-        <h1>A simple test</h1>  
+        <h1>A simple test</h1>
+	<h2>Text sample</h2>
     </main>
 	<script src="index.js"></script>
   </body>
