--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <main>
         <h1>A simple test</h1>
 	<h2>Text sample</h2>
+	<h3>Text sample</h3>
     </main>
 	<script src="index.js"></script>
   </body>
