--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <main>
         <h1>A simple test</h1>
-	<h2>Text sample</h2>
+	<h2>Text sample sample</h2>
 	<h3>Text sample</h3>
     </main>
 	<script src="index.js"></script>
