--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <h1>A simple test 313</h1>
 	<h2>Text sample sample</h2>
-	<h3>Text sample</h3>
+	<h3>Text sample 2</h3>
     </main>
 	<script src="index.js"></script>
   </body>
