--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <h1>A simple test 313</h1>
 	<h2>Text sample sample</h2>
-	<h4><h4><h4><h4><h4><h4>Text sample 2.7435.9</h4></h4></h4></h4></h4></h4>
+	<h4><h4><h4><h4><h4><h4><h4>Text sample 2.7435.9</h4></h4></h4></h4></h4></h4>
     </main>
 	<script src="index.js"></script>
   </body>
